
             • Support further merge operations: ‘median’, ‘var’, ‘sd’,
               ‘min’, ‘max’.

         • ‘plot_GrowthCurve()’

             • If the input data contain a least one infinite value the
               function will not crash any longer, but return ‘NULL’
               (#263, Norbert Mercier),

             • check for insufficient values in the data set and return
               ‘NULL’ (before the function crashed).

         • ‘plot_Histogram()’

             • New argument ‘interactive’ to produce an interactive
               plot using the JavaScript graphing library 'plotly.js'
               (requires the 'plotly' package).

         • ‘plot_RLum.Analysis()’

             • All ‘...’ arguments can now be provided as ‘vector’ or
               ‘list’ to gain more control of the plot appearance,

             • argument ‘abline’ now works also in combination with
               ‘combine = TRUE’ and allows to set ablines independently
               over different plots (#260),

             • automatic axes labelling improved for ‘combine = TRUE’,

             • support further ‘...’ argument ‘legend’ (TRUE/FALSE).

         • ‘plot_RLum.Data.Curve()’

             • Fix seldom bug that causes unexpected function behaviour
               if ‘xlab’ or ‘ylab’ exist as objects on the global
               environment (#265).

         • ‘plot_RLum.Data.Spectrum()’

             • Added ‘matrix’ as allowed input.

         • ‘read_BIN2R()’

             • Handling of corrupt BIN-files improved, the functions
               tries to import whatever possible,

             • the argument ‘n.records’ was not respected under rare
               circumstances,

             • in course of this (corrupt BIN-files, not respected
               ‘n.records’) the output data frame was longer than the
               list of count values; corrected.

         • ‘Risoe.BINfileData2RLum.Analysis()’
