@@ -1170,11 +1170,11 @@
 </td>
 <td class=cellinside><br /> A dose response curve is produced for luminescence measurements using a<br /> regenerative protocol.<br />
 </td>
-<td class=cellinside>1.8.4
+<td class=cellinside>1.8.5
 </td>
-<td class=cellinside>2016-02-05
+<td class=cellinside>2016-02-23
 </td>
-<td class=cellinside>05:21:29
+<td class=cellinside>19:40:13
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France),   Michael Dietze, GFZ Potsdam (Germany)<br />  R Luminescence Package Team
