@@ -1,5 +1,5 @@
 % latex table generated in R 3.3.0 by xtable 1.8-2 package
-% Tue Feb 23 10:11:28 2016
+% Tue Feb 23 19:43:17 2016
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -112,7 +112,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   59 & plot\_DRTResults & Visualise dose recovery test results & $<$br /$>$ The function provides a standardised plot output for dose recovery test$<$br /$>$ measurements.$<$br /$>$ & 0.1.8 & 2016-02-19 & 16:35:35
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
-  60 & plot\_GrowthCurve & Fit and plot a growth curve for luminescence data (Lx/Tx against dose) & $<$br /$>$ A dose response curve is produced for luminescence measurements using a$<$br /$>$ regenerative protocol.$<$br /$>$ & 1.8.4 & 2016-02-05 & 05:21:29
+  60 & plot\_GrowthCurve & Fit and plot a growth curve for luminescence data (Lx/Tx against dose) & $<$br /$>$ A dose response curve is produced for luminescence measurements using a$<$br /$>$ regenerative protocol.$<$br /$>$ & 1.8.5 & 2016-02-23 & 19:40:13
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France),   Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   61 & plot\_Histogram & Plot a histogram with separate error plot & $<$br /$>$ Function plots a predefined histogram with an accompanying error plot as$<$br /$>$ suggested by Rex Galbraith at the UK LED in Oxford 2010.$<$br /$>$ & 0.4.4 & 2016-02-05 & 05:21:29
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany),   Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
